--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="full" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,43 +13,35 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
     <!-- My custom css -->
-    <link href="/static/css/whereeat.css" rel="stylesheet">
+    <link href="/static/css/chooseeats.css" rel="stylesheet">
   </head>
   <body>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/index">chooseeats</a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/index">Home</a></li>
-            <li><a href="/about">About</a></li>
-            {% if authurl %}
-              <li><a href="{{ authurl }}">Authenticate with Foursquare</a></li>
-            {% else %}
-              <li><a href="/results">My History</a></li>
-              <li><a href="/friends">Friends</a></li>
-              <li><a href="/deauth">Logout</a></li>
-            {% endif %}
-          </ul>
-          <p class="navbar-text navbar-right">Signed in as {{ fulnm }}</p>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+  <!-- Navigation -->
+  <nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        {% if authurl %}
+          <li><a href="{{ authurl }}">Authenticate with Foursquare</a></li>
+        {% else %}
+          <li><a href="/results">Solo Eat</a></li>
+          <li><a href="/friends">Choose a Friend</a></li>
+        {% endif %}
+      </ul>
+      <a href="https://twitter.com/share" class="twitter-share-button navbar-right navbar-text" data-url="http://www.chooseeats.com" data-text="chooseeats.com: Eat with friends!" data-via="nickof4" data-size="small" data-related="nickof4">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </div>
+  </nav>
 
-  <div class="container">
-    {% block content %}{% endblock %}
+  <!-- Content -->
+  <div class="row">
+    <h3 class="bigtxt text-center">chooseeats</h3><br>
   </div>
+    {% block content %}{% endblock %}
   </body>
 </html>
