--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,5 +54,16 @@
     <h3 class="bigtxt text-center">chooseeats</h3><br>
   </div>
     {% block content %}{% endblock %}
+
+  <!-- Google -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-64017722-1', 'auto');
+    ga('send', 'pageview');
+  </script>
   </body>
 </html>
