--- a/app/templates/results2.html
+++ b/app/templates/results2.html
@@ -4,8 +4,10 @@
 <div class ='col-md-6 col-md-offset-3'>
     <div class="well well-lg myBackground">
         <h1>Go to <span id="pretype">a</span> <u><span id="rtype"></span></u>!</h1>
-        <h2 class="text-center"><small>Last checked in <strong><span id="check1"></span></strong> days ago.</small></h2>
+        <h2 class="text-center">{{ user }} <small>Last checked in <strong><span id="check1"></span></strong> days ago.</small></h2>
         <div id="uchart" class="text-center"></div>
+        <h2 class="text-center">{{ user2 }} <small>Last checked in <strong><span id="check2"></span></strong> days ago.</small></h2>
+        <div id="fchart" class="text-center"></div>
         <br><br>
         <div class="text-center">
             <button type="button" id="prebutt" class="btn btn-primary" onclick="prevChoice()"><</button>
@@ -20,6 +22,7 @@
     // Load Data
     var dat = {{ data|safe }};
     var uchecks = {{ uchecks|safe }};
+    var fchecks = {{ fchecks|safe }};
     var current_choice = 0;
 
     window.onload = function() {
