--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,23 +11,11 @@
     {% endif %}
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- My custom css -->
-      <link href="/static/css/chooseeats.css" rel="stylesheet">
-		<style type="text/css">
+    <link href="/static/css/chooseeats.css" rel="stylesheet">
+    <link href="/static/css/plots.css" rel="stylesheet">
 
-			.axis path,
-			.axis line {
-				fill: none;
-				stroke: black;
-				shape-rendering: crispEdges;
-			}
-
-			.axis text {
-				font-family: sans-serif;
-				font-size: 11px;
-			}
-
-		</style>
   </head>
   <body>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
