--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}About chooseeats!{% endblock %}
 {% block content %}
 <div class="col-md-8 col-md-offset-2">
   <div class="well well-lg myBackground">
