--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,24 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% if title %}
-      <title>{{ title }} - chooseeats</title>
-    {% else %}
-      <title>Welcome to chooseeats</title>
-    {% endif %}
+
+    <title>{% block title %}{% endblock %}</title>
+
     <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/lib/bootstrap.min.css" rel="stylesheet">
 
     <!-- My custom css -->
     <link href="/static/css/chooseeats.css" rel="stylesheet">
     <link href="/static/css/plots.css" rel="stylesheet">
 
+    <!-- JavaScript Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="/static/js/lib/bootstrap.min.js"></script>
+    <script src="/static/js/lib/d3/d3.js"></script>
   </head>
   <body>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script src="/static/js/d3/d3.js"></script>
 
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom">
@@ -35,6 +33,7 @@
           <span class="icon-bar"></span>
         </button>
       </div>
+
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -50,12 +49,14 @@
         <a href="https://twitter.com/share" class="twitter-share-button navbar-right navbar-text" data-url="http://www.chooseeats.com" data-text="chooseeats.com: Eat with friends!" data-via="nickof4" data-size="small" data-related="nickof4">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
+    </div>
   </nav>
 
   <!-- Content -->
   <div class="row">
     <h3 class="bigtxt text-center">chooseeats</h3><br>
   </div>
+
     {% block content %}{% endblock %}
 
   <!-- Google -->
