--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% block title %}Resutls on chooseeats!{% endblock %}
 
 <div class ='col-md-6 col-md-offset-3'>
     <div class="well well-lg myBackground">
